--- a/src/Pages/Signin/signin.css
+++ b/src/Pages/Signin/signin.css
@@ -1,10 +1,10 @@
 /* src/Login.css */
-.body{
+/* .body{
   background-image: url('../../assets/Images/background.svg');
   background-size: cover;
   background-position: 0 0;
   background-repeat: no-repeat;
-}
+} */
 .login-container {
   position: relative;
   width: 100%;
